--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ DB_URL=mongodb+srv://iwr:_libbeconf_@iwr-cluster.obvfi.mongodb.net/iwr?retryWrit
 JWTSigningKey=-=+_[]{};:,.<>/?!@#$%^&*()asdfghjklmnopqrstuvwxyxABCD
 KEY=zxcvbnm,./~!@#$%^&*()_+{}:"<>?|1234567890-=qwertyuiop[]\asdfghjkl;this.
 ALGORITHM=aes-192-cbc
+PORT=3001
+
+zstore
+FQcZ74cdNSj08x7k
